--- a/src/RB1_DEG_analysis.Rmd
+++ b/src/RB1_DEG_analysis.Rmd
@@ -1,201 +1,7 @@
 ---
-title: "lncRNA analysis of mCRPC He et al Nature Medicine 2021"
+title: "R Notebook"
 output: html_notebook
 ---
-#Load libraries
-```{r}
-
-library(tidyverse)
-library(Seurat)
-library(Hmisc)
-library(ggrepel)
-library(EnhancedVolcano)
-library(msigdbr)
-library(EnsDb.Hsapiens.v86)
-library(Matrix)
-library(ggpubr)
-options(ggrepel.max.overlaps = Inf)
-
-```
-
-#Read in scRNAseq data
-```{r}
-#Read in count data for tumors only in csv - convert to seurat object
-anno <- read.table("/Users/ds/Desktop/scRNA_datasets/scp_metadata.tsv", sep = "\t", header = T)  
-
-anno <- anno[-1,]
-row.names(anno) <- anno$NAME
-
-tpm <- read.csv(file = "/Users/ds/Desktop/scRNA_datasets/scp_tpm.tsv", sep = "\t", header = TRUE)
-
-tpm <- tpm[!duplicated(tpm$GENE),]
-row.names(tpm) <- tpm$GENE
-tpm <- tpm[,-1]
-colnames(tpm) <- as.character(1:length(anno$NAME) -1)
-
-bmet <- CreateSeuratObject(tpm, meta.data = anno)
-
-
-bmet <- SetAssayData(object = bmet, slot = "data", new.data = Matrix(as.matrix(log1p(tpm)), sparse = T))
-meta <- read.csv(file = "/Users/ds/Desktop/scRNA_datasets/scp_tpm_celltypes.csv")
-
-
-bmet@meta.data <- cbind(bmet@meta.data, meta)
-tx <- read.csv(file = "/Users/ds/Desktop/scRNA_datasets/He_NatureMedicine_tx.csv")
-tx <- tx %>% dplyr::filter(has.scRNA == "True")
-
-
-tx <- inner_join(bmet@meta.data, tx) %>% dplyr::select(c(biopsy, prior.enzalutamide, prior.abiraterone, prior.taxane, prior.platinum, prior.sipuleucel.T))
-
-bmet@meta.data <- cbind(bmet@meta.data, tx)
-
-saveRDS(object = bmet, file = "/Users/ds/Desktop/scRNA_datasets/He_mCRPC.rds")
-
-```
-
-
-```{r}
-tpm
-
-anno
-
-
-
-meta <- meta %>%  mutate(celltype = ifelse(supercluster.for.LDSC.SEG == "NK/T", "NK_T.", ifelse(supercluster.for.LDSC.SEG == "monocyte/macrophage", "monocyte_macrophage.",ifelse(supercluster.for.LDSC.SEG == "B lineage", "B.",ifelse(supercluster.for.LDSC.SEG == "tumor", "tumor.", ifelse(supercluster.for.LDSC.SEG == "erythroid", "erythroid.", supercluster.for.LDSC.SEG)) ) ))) %>% group_by(celltype) %>% mutate(ID = paste0(celltype, 1:n())) 
-
-
-  colnames(tpm) <- meta$ID
-
-
-reference <- data.frame(Genes = row.names(tpm), tpm)
-colnames(reference) <- c("Genes", gsub(x = colnames(reference)[-1], pattern = ".[0-9]*$", replacement = ""))
-
-head(reference)
-
-write.table(reference, file = "/Users/ds/Desktop/He_bulk_reference.txt", quote = F, row.names = F, sep = "\t" )
-
-#%>% group_by(celltype) %>% mutate(id = paste0(id = paste0(celltype, ".", 1:n())))
-
-
-meta %>%  mutate(celltype = ifelse(supercluster.for.LDSC.SEG == "NK/T", "NK.T", ))
-meta$supercluster.for.LDSC.SEG %>% unique()
-
- referencere
-meta$supercluster.for.LDSC.SEG %>% unique()
-colnames(reference)
-
- gsub(x = colnames(reference)[-1], pattern = ".[0-9]*$", replacement = "") %>% head()
-
-```
-
-
-```{r}
-
-pca_lncrna <- dplyr::filter(filt_markers, cluster == "erythroid") %>% .$gene
-
-gep <- read.table(file = "/Users/ds/Desktop/CIBERSORTx_Job40_output/CIBERSORTxGEP_Job40_GEPs.txt", header = T)
-
-gep <- gep %>% dplyr::filter(GeneSymbol %in% pca_lncrna) %>% dplyr::select(-GeneSymbol) %>% log1p() 
-
-
-gep%>% gather(key = "Cell", value = "GEX") %>% ggplot(aes(y = reorder(Cell, GEX),x = GEX, fill = Cell))  + geom_boxplot(width = 0.5, alpha  = 0.5)
-
-
-```
-
-
-#Download lncRNAs hg38 from cellranger
-```{r}
-
-bmet <- readRDS(file = "/Users/ds/Desktop/scRNA_datasets/He_mCRPC.rds")
-
-all_genes <- read_tsv(file = "/Users/ds/Desktop/projects/data/anno//hg38.genes.meta.tsv")
-
-linc <- all_genes %>% dplyr::filter(gene.biotype == "lncRNA")
-pcg <- all_genes %>% dplyr::filter(gene.biotype == "protein_coding")
-
-linc
-
-mat <- GetAssayData(object = bmet)
-
-
-
-id <- intersect(row.names(mat), linc$gene.name)
-
-
-
-
-dim(mat[id,])[1] / dim(linc)[1]
-
-
-DotPlot(object = bmet, features = "LINC00152")
-
-mat["PCAT14",]
-Idents(bmet) <- "supercluster.for.LDSC.SEG"
-
-
-```
-
-
-
-#LncRNA markers for cells
-```{r}
-
-bmet <- bmet[row.names(bmet) %in% linc$gene.name,]
-markers <- FindAllMarkers(object = bmet, only.pos = T, verbose = T)
-
-
-
-top <-markers %>% dplyr::filter(gene %in% linc$gene.name) %>% arrange(-avg_log2FC) %>% group_by(cluster) %>% dplyr::filter(pct.1 >= 0.25) %>% dplyr::slice(1:5) %>% .$gene
-
-markers %>% dplyr::filter(gene %in% linc$gene.name) %>% arrange(-avg_log2FC) %>% group_by(cluster)  %>% dplyr::filter(cluster == "tumor")
-
-names(top) <- markers %>% dplyr::filter(gene %in% linc$gene.name) %>% arrange(-avg_log2FC) %>% group_by(cluster) %>% dplyr::filter(pct.1 >= 0.25) %>% dplyr::slice(1:5) %>% .$cluster
-
-top
-
-pdf("/Users/ds/Desktop/plot.pdf", width = 15)
-DotPlot(object = bmet, features = top, group.by = "supercluster.for.LDSC.SEG") + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + coord_flip()
-dev.off()
-
-markers %>% dplyr::filter(gene %in% linc$gene.name)
-
-top
-
-
-
-```
-
-#Plotting
-```{r}
-
-
-seurat_pipeline <- function(object, ndims, seed, resolution){
-  
-  #Data already normalized 
-    FindVariableFeatures(object = object, nfeatures = 2000) %>% 
-    ScaleData() %>%
-    RunPCA() %>% 
-    RunUMAP(dims = 1:ndims, reduction = "pca") %>% 
-    FindNeighbors(reduction = "pca", dims = 1:ndims) %>% 
-    FindClusters(resolution = resolution, algorithm = 1, random.seed =seed) %>% 
-    return()
-  
-}
-
-
-bmet <- seurat_pipeline(object = bmet, ndims = 40, seed = 123, 0.5)
-
-Idents(bmet) <- "supercluster.for.LDSC.SEG"
-top
-
-pdf("/Users/ds/Desktop/plot.pdf", width = 10)
-FeaturePlot(object = bmet, features = top[seq(1, length(top), 5)], label = T, repel = T)
-dev.off()
-
-
-UMAPPlot(object = bmet, label = T, repel = T)
-```
 
 #Enza compare
 ```{r}
@@ -228,6 +34,9 @@ deg
 
 bmet["LINC01060",]
 ```
+
+
+
 
 ```{r}
 cf <- read.table("/Users/ds/Desktop/projects/BME_analysis/results/CIBERSORTx_Job33_Adjusted.txt", sep = "\t", header = T)
@@ -440,8 +249,4 @@ df
 ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10)
 
 ```
-
-
-
-
 
